<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wifi_setting_preference_category_title">"Select available Wi-Fi network"</string>
    <string name="ime_security_warning">This input method may be able to collect
    all the text you type, including personal data like passwords and credit
    card numbers.  It comes from the app
    <xliff:g id="ime_application_name">%1$s</xliff:g>.
    Use this input method?</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="use_system_language_to_select_input_method_subtypes">Use system language</string>
    <string name="add_account_label">Add account</string>
    <string name="accessibility_sync_enabled">Sync enabled</string>
    <string name="accessibility_sync_disabled">Sync disabled</string>
    <string name="accessibility_sync_error">Sync error.</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="sync_enabled">Sync is ON</string>
    <string name="sync_disabled">Sync is OFF</string>
    <string name="sync_error">Sync error</string>
    <string name="last_synced">Last synced <xliff:g id="last_sync_time">%1$s</xliff:g></string>
    <string name="sync_in_progress">Syncing now\u2026</string>
    <string name="sync_one_time_sync">Touch to sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="zone_auto">Automatic time zone</string>
    <string name="date_time_auto">Automatic date &amp; time</string>
    <string name="date_time_auto_summaryOn">Use network-provided time</string>
    <string name="date_time_auto_summaryOff">Use network-provided time</string>
    <string name="date_time_set_time">Set time</string>
    <string name="date_time_set_timezone">Select time zone</string>
    <string name="date_time_set_date">Set date</string>
    <string name="date_picker_title">Date</string>
    <string name="time_picker_title">Time</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Proxy port</string>
    <string name="proxy_port_hint">Port:8080</string>
    <string name="proxy_exclusionlist_label">Bypass proxy for</string>
    <string name="proxy_exclusionlist_hint">Exclusion list: example.com,web</string>
    <string name="proxy_defaultView_text">Restore defaults</string>
    <string name="proxy_action_text">Done</string>
    <string name="proxy_hostname_label">Proxy hostname</string>
    <string name="proxy_hostname_hint">Proxy hostname: proxy.example.com</string>
    <string name="proxy_error">Attention</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">"The hostname you typed isn\'t valid."</string>
    <string name="proxy_error_invalid_exclusion_list">"The exclusion list you typed isn\'t properly formatted. Type a comma-separated list of excluded domains."</string>
    <string name="proxy_error_empty_port">You need to complete the port field.</string>
    <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty.</string>
    <string name="proxy_error_invalid_port">"The port you typed isn\'t valid."</string>
    <string name="proxy_warning_limited_support">The HTTP proxy is used by the browser but may not be used by the other apps.</string>
    <string name="wifi_settings_preference_category_title">"Select available Wi-Fi network"</string>
    <string name="wifi_settings_category">Wi-Fi settings</string>
    <string name="wifi_starting">Turning Wi-Fi on\u2026</string>
    <string name="wifi_stopping">Turning off Wi-Fi\u2026</string>
    <string name="wifi_error">Error</string>
    <string name="wifi_in_airplane_mode">In Airplane mode</string>
    <string name="wifi_fail_to_scan">"Can\'t scan for networks"</string>
    <string name="wifi_scan_notify_text_location_on">To improve location accuracy and for other purposes, Google and other apps may scan for nearby networks, even when Wi-Fi is off. If you don\'t want this to happen, go to Advanced &gt; Scanning always available.</string>
    <string name="wifi_scan_notify_text_location_off">Apps may scan for nearby networks, even when Wi-Fi is off. If you don\'t want this to happen, go to Advanced &gt; Scanning always available.</string>
    <string name="wifi_menu_connect">Connect to network</string>
    <string name="wifi_menu_forget">Forget network</string>
    <string name="wifi_menu_modify">Modify network</string>
    <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi-Fi on.</string>
    <string name="wifi_empty_list_wifi_on">Searching for Wi-Fi networks\u2026</string>
    <string name="wifi_empty_list_user_restricted">"You don\'t have permission to change the Wi-Fi network."</string>
    <string name="wifi_show_advanced">Show advanced options</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_signal">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_ip_address_hint">IP address: 192.168.1.128</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ip_settings">IP settings</string>
    <string name="wifi_unchanged">(unchanged)</string>
    <string name="wifi_unspecified">(unspecified)</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_wps_available_first_item">WPS available</string>
    <string name="wifi_wps_available_second_item">\u0020(WPS available)</string>
    <string name="wifi_secured_first_item">Secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string name="wifi_secured_second_item">, secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_save">Save</string>
    <string name="wifi_failed_save_message">Failed to save network</string>
    <string name="wifi_cancel">Cancel</string>
    <string name="wifi_ip_settings_invalid_ip_address">Type a valid IP address.</string>
    <string name="wifi_ip_settings_invalid_gateway">Type a valid gateway address.</string>
    <string name="wifi_ip_settings_invalid_dns">Type a valid DNS address.</string>
    <string name="wifi_ip_settings_invalid_network_prefix_length">Type a network prefix length between 0 and 32.</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns1_hint">DNS1: 8.8.8.8</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_dns2_hint">DNS2: 8.8.8.8</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_gateway_hint">Gateway: 192.168.1.1</string>
    <string name="wifi_network_prefix_length">Network prefix length</string>
    <string name="wifi_network_prefix_length_hint">Prefix length: 24</string>
    <string name="lock_settings_picker_title">Choose screen lock</string>
    <string name="help_url_wifi" translatable="false"></string>
    <string name="help_url_accounts" translatable="false"></string>
    <string name="wizard_script_uri">android.resource://com.asus.cnsetupwizard/raw/custom_wizard_script</string>
    <string name="wizard_script_uri_no_network">android.resource://com.asus.cnsetupwizard/raw/custom_wizard_script_no_network</string>
    <string name="restr_pin_enter_admin_pin">Enter administrator PIN</string>
    <string name="sim">SIM</string>
    <string name="fingerprint_position_back">Locate the fingerprint sensor on the back of your phone.</string>
    <string name="fingerprint_position_front">Locate the fingerprint sensor on the front of your phone.</string>
    <string name="pattern_info1">Please connect at least 4 points</string>
    <string name="pattern_info2">Lift your finger when done</string>
    <string name="pattern_info3">Pattern recorded</string>
    <string name="to_next">next</string>
    <string name="finish_button_label">Finish</string>
    <string name="security_settings_fingerprint_enroll_error_timeout_dialog_message">Fingerprint enrollment time limit reached. Try again.</string>
    <string name="security_settings_fingerprint_enroll_error_generic_dialog_message">Fingerprint enrollment didn\'t work. Try again or use a different finger.</string>
    <string name="fingerprint_add_info1">Put your finger on the fingerprint sensor and feel the vibration</string>
    <string name="fingerprint_add_info2">Move the finger slightly so that the sensor can record the fingerprint more completely and feel the vibration and then move the finger</string>
    <string name="fingerprint_add_complete">Completed</string>
    <string name="fingerprint_add_complete_info">As long as you see this icon, you can use the fingerprint to authenticate or authorize the purchase transactions.</string>
    <string name="security_settings_fingerprint_enroll_touch_dialog_title">Whoops, that\u2019s not the sensor</string>
    <string name="enter_password">Enter your new password</string>
    <string name="enter_pin_title">Choose your PIN</string>
    <string name="previous">Previous</string>
    <string name="skip">Jump</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerprint_check_info">Use a fingerprint to wake or unlock your phone, authorize or sign in for purchase transactions</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="select_screen_lock_info">Choose the fingerprint method to unlock</string>
    <string name="fingerprint_and_number">Fingerprint + PIN</string>
    <string name="fingerprint_and_pattern">Fingerprint + Pattern</string>
    <string name="fingerprint_and_mixture">Fingerprint + Password</string>
    <string name="add_sim">Insert SIM card</string>
    <string name="no_sim">No SIM card</string>
    <string name="next">Next</string>
</resources>