<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/area_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/asus_ationbar_height"
        android:orientation="horizontal"
        android:background="@color/asus_action_bottom_bar_color">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/asus_actionbar_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/asusres_ic_ab_back_holo_light" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/button_back"
            android:layout_marginLeft="@dimen/asus_actionbar_content_margin"
            android:text="@string/fingerprint_title"
            android:textColor="@color/asus_content_main_color"
            android:textSize="@dimen/asus_actionbar_main_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/asus_divider_area_height"
        android:background="@color/asus_divider_area_color"
        android:layout_below="@+id/area_title"
        android:id="@+id/divider_area"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/asus_content_head_height"
        android:text="@string/select_screen_lock_info"
        android:id="@+id/select_info"
        android:layout_marginLeft="@dimen/asus_content_margin_left_right"
        android:gravity="center_vertical"
        android:layout_below="@+id/divider_area"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/select_info">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_divider_line"
            android:background="@color/asus_divider_area_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_content_height1"
            android:id="@+id/number">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:text="@string/fingerprint_and_number"
                android:textColor="@color/asus_content_main_color"
                android:textSize="@dimen/asus_content_main_size"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:src="@drawable/asusres_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_divider_line"
            android:background="@color/asus_divider_area_color"
            android:layout_marginLeft="@dimen/asus_content_margin_left_right"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_content_height1"
            android:id="@+id/patten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:text="@string/fingerprint_and_pattern"
                android:textColor="@color/asus_content_main_color"
                android:textSize="@dimen/asus_content_main_size"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:src="@drawable/asusres_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_divider_line"
            android:background="@color/asus_divider_area_color"
            android:layout_marginLeft="@dimen/asus_content_margin_left_right"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_content_height1"
            android:id="@+id/mixture">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:text="@string/fingerprint_and_mixture"
                android:textColor="@color/asus_content_main_color"
                android:textSize="@dimen/asus_content_main_size"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/asus_content_margin_left_right"
                android:layout_centerVertical="true"
                android:src="@drawable/asusres_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/asus_divider_line"
            android:background="@color/asus_divider_area_color" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/asus_content_margin_left_right"
            android:text="@string/previous"
            android:layout_alignParentBottom="true"
            style="@style/bottom_text"/>
    </RelativeLayout>

</RelativeLayout>