<?xml version="1.0" encoding="utf-8"?>
<!--
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License")
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/area_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/asus_ationbar_height"
        android:orientation="horizontal"
        android:background="@color/asus_action_bottom_bar_color">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/asus_actionbar_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/asusres_ic_ab_back_holo_light" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/button_back"
            android:layout_marginLeft="@dimen/asus_actionbar_content_margin"
            android:text="@string/enter_pin_title"
            android:textColor="@color/asus_content_main_color"
            android:textSize="@dimen/asus_actionbar_main_text_size" />
    </RelativeLayout>

    <!-- header text ('Enter Pin') -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lock_title_margin_top"
        android:text="@string/enter_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/area_title"
        android:id="@+id/lock_title"
        android:textSize="@dimen/asus_actionbar_main_text_size"
        android:textColor="@color/asus_content_main_color" />

    <!-- Password entry field -->
    <EditText android:id="@+id/password_entry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/password_edit_height"
        android:layout_marginLeft="@dimen/password_edit_margin_left_right"
        android:layout_marginRight="@dimen/password_edit_margin_left_right"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:gravity="center"
        android:layout_below="@+id/lock_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/lock_edit_margin_top"
        android:background="@drawable/edit_bg"
        android:textCursorDrawable="@null"/>

    <TextView android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:layout_below="@+id/password_entry"
        android:layout_marginTop="@dimen/lock_summary_margin_top"
        android:textColor="@color/asus_content_summary_color"
        android:textSize="@dimen/asus_content_summary_size"
        android:layout_centerHorizontal="true"/>

    <!-- Spacer between password entry and keyboard -->

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/password_entry"
        android:layout_marginTop="@dimen/lock_button_margin_top"
        android:layout_centerHorizontal="true">

        <!-- left : cancel -->
        <Button android:id="@+id/cancel_button"
            android:text="@string/wifi_cancel"
            android:layout_width="@dimen/lock_button_width"
            android:layout_height="@dimen/lock_button_height"
            android:layout_marginLeft="@dimen/lock_button_margin_left_right"
            android:textSize="@dimen/asus_actionbar_main_text_size"
            android:textColor="@color/asus_content_main_color"
            android:background="@drawable/edit_bg"/>

        <!-- right : continue -->
        <Button android:id="@+id/next_button"
            android:text="@string/to_next"
            android:layout_width="@dimen/lock_button_width"
            android:layout_height="@dimen/lock_button_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/lock_button_margin_left_right"
            android:textSize="@dimen/asus_actionbar_main_text_size"
            android:background="@drawable/edit_bg"/>

    </RelativeLayout>

    <!-- Alphanumeric keyboard -->
    <com.android.internal.widget.PasswordEntryKeyboardView android:id="@+id/keyboard"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:keyBackground="@*android:drawable/btn_keyboard_key_fulltrans"
        android:visibility="gone"
        />

</RelativeLayout>
